2022-06-05
    Added text_anchor cooked attr to MsvgPaintCtx.
    Aditional parameter int copytree to the MsvgDupElement function.
    Initial work to add new elements EID_FONT, EID_FONTFACE,
      EID_MISSINGGLYPH and EID_GLYPH.
2022-06-05
    Updated docs to v0.50
2022-05-31
    Added fill_iri and stroke_iri members to the MsvgPaintCtx struct
    and populate them if fill or stroke are IRI_COLOR
    Added functions to manage MsvgPaintCtx structs
      MsvgPaintCtx *MsvgNewPaintCtx(const MsvgPaintCtx *src);
      void MsvgCopyPaintCtx(MsvgPaintCtx *des, const MsvgPaintCtx *src);
      void MsvgDestroyPaintCtx(MsvgPaintCtx *pctx);
    Added function to find raw attributes
      char *MsvgFindRawAttribute(const MsvgElement *el, const char *key);
    Added function to normalize gradients to the Tiny specs
      int MsvgNormalizeRawGradients(MsvgElement *el);
    More use of the "const" keyword
    Added option "-ng" to test/tcook.c to test the gradient normalization
2022-05-26
    Changes to the MGRX tests:
    added mouse interaction to showsvg.c
2022-05-21
    API change: in the MsvgElement changed the MsvgPaintCtx member to a pointer,
    because not all elements need one, only EID_SVG, EID_G, EID_USE, EID_RECT,
    EID_CIRCLE, EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH and
    EID_TEXT
    Added new supported elements: EID_LINEARGRADIENT, EID_RADIALGRADIENT (can
    be only sons of an EID_DEF element) and EID_STOP (can only be son of a
    gradient element), TODO: reference gradients for fill and stroke
2022-05-14
    Changes to the MGRX tests:
    - renamed rsvg2.c to showsvg.c
2022-05-14
    test/tread.c admit the parameter "-r" to show debug info in stdout when reading
    a svg file
2022-05-14
    Solved bug in MsvgGetCookedDims
    New rgbcolor define URL_COLOR for gradients (TODO) by now it fills with silver color
    Second function version to read a svg file:
      MsvgElement *MsvgReadSvgFile2(const char *fname, int *error, FILE *report);