@@ -17,6 +17,7 @@ test/msvgt1.svg
 test/msvgt2a.svg
 test/msvgt2b.svg
 test/msvgt3.svg
+test/msvgt4.svg
 mgrx/tgsvg.svg
 # Others
 svgexpls
